// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialize() should initialize app 1`] = `
Array [
  Object {
    "payload": Array [],
    "type": "MOCK/COMMONS/ACTIONS/GET_USER_SETTING",
  },
  Object {
    "payload": Object {
      "user": Object {
        "departmentCode": "SD-0001",
        "departmentName": "SD",
        "employeeCode": "001",
        "employeeName": "FUGA HOGE",
        "employeePhotoUrl": "",
        "id": "abcd001",
        "isDelegated": true,
        "managerName": "XXX",
        "title": "Senior Engineer",
      },
    },
    "type": "/DAILY-SUMMARY/ENTITIES/USER/SET",
  },
  Object {
    "payload": Object {
      "mockPermission": true,
    },
    "type": "COMMONS/ACCESS_CONTROL/SET_USER_PERMISSION",
  },
]
`;

exports[`showErrorNotification() should dispatch to hide error notifications 1`] = `
Array [
  Object {
    "type": "COMMONS/MODULES/TOAST/HIDE",
  },
  Object {
    "type": "/DAILY-SUMMARY/UI/BLOCKING/DISABLE",
  },
]
`;

exports[`showErrorNotification() should dispatch to reset error notifications 1`] = `
Array [
  Object {
    "type": "COMMONS/MODULES/TOAST/RESET",
  },
]
`;

exports[`showErrorNotification() should dispatch to show error notifications 1`] = `
Array [
  Object {
    "type": "/DAILY-SUMMARY/UI/BLOCKING/ENABLE",
  },
  Object {
    "payload": Object {
      "message": "test",
      "options": undefined,
      "variant": "error",
    },
    "type": "COMMONS/MODULES/TOAST/SHOW",
  },
]
`;
